change visibility of some models

--- a/tensorflow/lite/micro/examples/recipes/BUILD
+++ b/tensorflow/lite/micro/examples/recipes/BUILD
@@ -8,6 +8,7 @@ py_library(
     name = "resource_variables_lib",
     srcs = ["resource_variables_lib.py"],
     srcs_version = "PY3",
+    visibility = ["//visibility:public"],
     deps = [
         requirement("numpy"),
         requirement("tensorflow-cpu"),
