--- a/signal/BUILD
+++ b/signal/BUILD
@@ -1,5 +1,6 @@
 load("//signal:tflm_signal.bzl", "py_tflm_signal_library")
 load("//tensorflow:extra_rules.bzl", "tflm_signal_friends")
+load("@tflm_pip_deps//:requirements.bzl", "requirement")
 
 package(
     licenses = ["notice"],
@@ -36,5 +37,21 @@ py_tflm_signal_library(
     cc_op_defs = ["tensorflow_core/ops/window_op.cc"],
     cc_op_kernels = [
         "//signal/tensorflow_core/kernels:window_kernel",
+    ],
+)
+
+py_test(
+    name = "window_op_test",
+    srcs = ["python/ops/window_op_test.py"],
+    data = [
+        "//signal/python/ops/testdata:window_test1.txt",
+    ],
+    python_version = "PY3",
+    srcs_version = "PY3",
+    deps = [
+        ":window_op",
+        requirement("numpy"),
+        requirement("tensorflow-cpu"),
+        "//signal/python/utils:util"
     ],
 )
