--- a/tensorflow/lite/micro/python/interpreter/src/BUILD
+++ b/tensorflow/lite/micro/python/interpreter/src/BUILD
@@ -31,6 +31,7 @@ cc_library(
     visibility = [
         ":op_resolver_friends",
         "//tensorflow/lite/micro/integration_tests:__subpackages__",
+        "//signal/micro/kernels:__subpackages__",
     ],
     deps = [
         "//tensorflow/lite/micro:micro_compatibility",
