--- a/tensorflow/lite/micro/examples/hello_world/BUILD
+++ b/tensorflow/lite/micro/examples/hello_world/BUILD
@@ -1,5 +1,6 @@
 # Description:
 #   TensorFlow Lite for Microcontrollers "hello world" example.
+# Test.
 load("@tflm_pip_deps//:requirements.bzl", "requirement")
 load(
     "//tensorflow/lite/micro:build_def.bzl",
