python: rename package tflm_runtime to runtime
Rename the Python package `tflm_runtime` to simply `runtime` in
preparation for adding it under the new namespace package
`tflite_micro`. Its full name will then be `tflite_micro.runtime`.

BUG=part of #1484

--- a/tensorflow/lite/micro/examples/mnist_lstm/BUILD
+++ b/tensorflow/lite/micro/examples/mnist_lstm/BUILD
@@ -15,7 +15,7 @@ py_binary(
     srcs = ["evaluate.py"],
     srcs_version = "PY3",
     deps = [
-        "//tensorflow/lite/micro/python/interpreter/src:tflm_runtime",
+        "//tensorflow/lite/micro/python/interpreter/src:runtime",
         "@absl_py//absl:app",
     ],
 )
