--- a/tensorflow/lite/micro/python/interpreter/src/BUILD
+++ b/tensorflow/lite/micro/python/interpreter/src/BUILD
@@ -66,7 +66,8 @@ pybind_extension(
 # tflm_runtime is deprecated, please use runtime instead.
 alias (
     name = "tflm_runtime",
-    actual = ":runtime"
+    actual = ":runtime",
+    visibility = ["//visibility:public"],
 )
 
 py_library(
