python: rename package tflm_runtime to runtime (#2030)
Rename the Python package `tflm_runtime` to simply `runtime` in preparation for adding it under the new namespace package `tflite_micro`. Its full name will then be `tflite_micro.runtime`.

We have kept the `tflm_runtime` target as an alias in order to stage this change. More details in http://b/286456378

BUG=part of #1484

--- a/tensorflow/lite/micro/python/interpreter/src/BUILD
+++ b/tensorflow/lite/micro/python/interpreter/src/BUILD
@@ -63,10 +63,23 @@ pybind_extension(
     ],
 )
 
-py_library(
+# tflm_runtime is deprecated, please use runtime instead.
+# TODO(b/286456378): remove the alias once all usage is change to the runtime
+# target.
+alias(
     name = "tflm_runtime",
-    srcs = ["tflm_runtime.py"],
-    data = [":interpreter_wrapper_pybind.so"],
+    actual = ":runtime",
+    visibility = ["//visibility:public"],
+)
+
+py_library(
+    name = "runtime",
+    srcs = [
+        "runtime.py",
+    ],
+    data = [
+        ":interpreter_wrapper_pybind.so",
+    ],
     srcs_version = "PY3",
     visibility = ["//visibility:public"],
     deps = [
