--- a/tensorflow/lite/micro/python/interpreter/src/BUILD
+++ b/tensorflow/lite/micro/python/interpreter/src/BUILD
@@ -64,12 +64,12 @@ pybind_extension(
 )
 
 # tflm_runtime is deprecated, please use runtime instead.
-# TODO(b/286456378): remove the alias once all usage is change to the runtime
-# target.
-alias(
+# TODO(b/286456378): remove once all usage is changed to the runtime target.
+py_library(
     name = "tflm_runtime",
-    actual = ":runtime",
+    srcs = ["tflm_runtime.py"],
     visibility = ["//visibility:public"],
+    deps = [":runtime"],
 )
 
 py_library(
