feat(python): rename extension module to _runtime
Rename extension module `interpreter_wrapper_pybind` to
`_runtime`. It is conventional for an extension module to use the
same name as its corresponding pure-Python wrapper module, but
with a leading underscore.

BUG=part of #1484

--- a/tensorflow/lite/micro/examples/recipes/BUILD
+++ b/tensorflow/lite/micro/examples/recipes/BUILD
@@ -21,7 +21,7 @@ py_test(
     srcs_version = "PY3",
     tags = [
         "noasan",
-        "nomsan",  # Python doesn't like these symbols from interpreter_wrapper_pybind.so
+        "nomsan",  # Python doesn't like these symbols
         "noubsan",
     ],
     deps = [
