Update RISCV workflows to use docker container with qemu.
This is a first step towards switching RISCV CI to using qemu instead of
Renode.

qemu build and install takes a long time, so we currently use it via the
TFLM CI docker container (https://github.com/tensorflow/tflite-micro/pull/1904).

Once this PR is merged, https://github.com/tensorflow/tflite-micro/pull/2035 should be ready to go.

BUG=http://b/286622884

--- a/.github/workflows/riscv_postmerge.yml
+++ b/.github/workflows/riscv_postmerge.yml
@@ -7,7 +7,7 @@
 # This file can not be run stand-alone. It is called from tests_post.yml as part of
 # the ci automation.
 
-name: Risc-v Postmerge
+name: RISC-V Postmerge
 
 on:
   workflow_call:
@@ -37,6 +37,7 @@ jobs:
         pip3 install Wave
         pip3 install numpy
     - name: Test
-      run: |
-        cd ../
-        tflite-micro/tensorflow/lite/micro/tools/ci_build/test_riscv.sh tflite-micro/
+    - name: Test
+      uses: docker://ghcr.io/tflm-bot/tflm-ci:latest
+      with:
+        args: /bin/sh -c tensorflow/lite/micro/tools/ci_build/test_riscv.sh
