Add rascani@ as CODEOWNER for ci and .github directories.
BUG=cleanup

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,4 +1,4 @@
 *          @tensorflow/micro
 
-/.github/  @advaitjain @rockyrhodes @vamsimanchala
-/ci/       @advaitjain @rockyrhodes @vamsimanchala
+/.github/  @advaitjain @rockyrhodes @rascani
+/ci/       @advaitjain @rockyrhodes @rascani
