feat(python): rename interpreter_test to runtime_test
Rename interpreter_test to runtime_test to match the naming of
the runtime module, as is convention.

BUG=part of #1484

--- a/tensorflow/lite/micro/python/interpreter/tests/BUILD
+++ b/tensorflow/lite/micro/python/interpreter/tests/BUILD
@@ -3,9 +3,8 @@ load("@tflm_pip_deps//:requirements.bzl", "requirement")
 licenses(["notice"])
 
 py_test(
-    name = "interpreter_test",
-    srcs = ["interpreter_test.py"],
-    main = "interpreter_test.py",
+    name = "runtime_test",
+    srcs = ["runtime_test.py"],
     python_version = "PY3",
     tags = [
         "noasan",
