--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,39 @@
 venv
 gen
 *.o
+tensorflow/lite/micro/integration_tests/seanet/*
+train
 
 # Ignore the directory in which `clangd` stores its local index.
 /.cache/
 
 # Ignore the `external` symlink added by `bazel-compile-commands-extractor`
 /external
+
+speech_micro_train_2020_05_10.tgz
+tensorflow/lite/micro/examples/hello_world/models/hello_world_float_model_data.cc
+tensorflow/lite/micro/examples/hello_world/models/hello_world_float_model_data.h
+tensorflow/lite/micro/examples/hello_world/models/hello_world_int8_model_data.cc
+tensorflow/lite/micro/examples/hello_world/models/hello_world_int8_model_data.h
+tensorflow/lite/micro/examples/memory_footprint/models/simple_add_model_model_data.cc
+tensorflow/lite/micro/examples/memory_footprint/models/simple_add_model_model_data.h
+tensorflow/lite/micro/examples/micro_speech/micro_speech_model_data.cc
+tensorflow/lite/micro/examples/micro_speech/micro_speech_model_data.h
+tensorflow/lite/micro/examples/micro_speech/testdata/no_1000ms_audio_data.cc
+tensorflow/lite/micro/examples/micro_speech/testdata/no_1000ms_audio_data.h
+tensorflow/lite/micro/examples/micro_speech/testdata/no_30ms_audio_data.cc
+tensorflow/lite/micro/examples/micro_speech/testdata/no_30ms_audio_data.h
+tensorflow/lite/micro/examples/micro_speech/testdata/yes_1000ms_audio_data.cc
+tensorflow/lite/micro/examples/micro_speech/testdata/yes_1000ms_audio_data.h
+tensorflow/lite/micro/examples/micro_speech/testdata/yes_30ms_audio_data.cc
+tensorflow/lite/micro/examples/micro_speech/testdata/yes_30ms_audio_data.h
+tensorflow/lite/micro/examples/person_detection/testdata/no_person_image_data.cc
+tensorflow/lite/micro/examples/person_detection/testdata/no_person_image_data.h
+tensorflow/lite/micro/examples/person_detection/testdata/person_image_data.cc
+tensorflow/lite/micro/examples/person_detection/testdata/person_image_data.h
+tensorflow/lite/micro/models/keyword_scrambled_8bit_model_data.cc
+tensorflow/lite/micro/models/keyword_scrambled_8bit_model_data.h
+tensorflow/lite/micro/models/keyword_scrambled_model_data.cc
+tensorflow/lite/micro/models/keyword_scrambled_model_data.h
+tensorflow/lite/micro/models/person_detect_model_data.cc
+tensorflow/lite/micro/models/person_detect_model_data.h
