--- a/tensorflow/lite/micro/examples/mnist_lstm/BUILD
+++ b/tensorflow/lite/micro/examples/mnist_lstm/BUILD
@@ -15,7 +15,7 @@ py_binary(
     srcs = ["evaluate.py"],
     srcs_version = "PY3",
     deps = [
-        "//tensorflow/lite/micro/python/interpreter/src:runtime",
+        "//python/tflite_micro:runtime",
         "@absl_py//absl:app",
     ],
 )
