Manual sync from TF to TFLM.
Steps:
 * modified ci/tflite_files.txt
 * ```./ci/sync_from_upstream_tf.sh```
 * additional changes needed to fix the build

There are some assumptions that we had been making that have been
somewhat broken by the changes from http://cl/539690111

More details to follow. This PR is currently to test that all the TFLM
builds are green.

BUG=http://b/287269351

--- a/tensorflow/lite/BUILD
+++ b/tensorflow/lite/BUILD
@@ -4,6 +4,16 @@ package(
 )
 
 cc_library(
+    name = "array",
+    srcs = ["array.cc"],
+    hdrs = ["array.h"],
+    copts = ["-std=c++17"],
+    deps = [
+        "//tensorflow/lite/core/c:common",
+    ],
+)
+
+cc_library(
     name = "type_to_tflitetype",
     hdrs = [
         "portable_type_to_tflitetype.h",
