files for fft op

--- a/signal/micro/kernels/BUILD
+++ b/signal/micro/kernels/BUILD
@@ -10,6 +10,7 @@ package(
 cc_library(
     name = "register_signal_ops",
     srcs = [
+        "rfft.cc",
         "window.cc",
     ],
     copts = micro_copts(),
@@ -17,7 +18,9 @@ cc_library(
         "//tensorflow/lite/micro",
     ],
     deps = [
+        "//signal/src:rfft",
         "//signal/src:window",
+        "//tensorflow/lite:type_to_tflitetype",
         "//tensorflow/lite/kernels:kernel_util",
         "//tensorflow/lite/kernels/internal:tensor",
         "//tensorflow/lite/micro:flatbuffer_utils",
@@ -28,6 +31,34 @@ cc_library(
         "//tensorflow/lite/micro/kernels:kernel_util",
     ],
 )
+
+cc_library(
+    name = "fft_flexbuffers_generated_data",
+    srcs = [
+        "fft_flexbuffers_generated_data.cc",
+    ],
+    hdrs = [
+        "fft_flexbuffers_generated_data.h",
+    ],
+)
+
+cc_test(
+    name = "fft_test",
+    srcs = [
+        "fft_test.cc",
+    ],
+    deps = [
+        ":register_signal_ops",
+        ":fft_flexbuffers_generated_data",
+        "//tensorflow/lite/c:common",
+        "//signal/testdata:fft_test_data",
+        "//tensorflow/lite/micro:op_resolvers",
+        "//tensorflow/lite/micro:test_helpers",
+        "//tensorflow/lite/micro/kernels:kernel_runner",
+        "//tensorflow/lite/micro/testing:micro_test",
+    ],
+)
+
 
 cc_library(
     name = "window_flexbuffers_generated_data",
