--- a/python/tflite_micro/signal/BUILD
+++ b/python/tflite_micro/signal/BUILD
@@ -15,6 +15,7 @@ cc_library(
     name = "ops_lib",
     visibility = [":signal_friends"],
     deps = [
+        ":fft_ops_cc",
         ":window_op_cc",
     ],
 )
@@ -27,7 +28,30 @@ py_library(
     ],
     srcs_version = "PY3",
     deps = [
+        ":fft_ops",
         ":window_op",
+    ],
+)
+
+py_tflm_signal_library(
+    name = "fft_ops",
+    srcs = ["ops/fft_ops.py"],
+    cc_op_defs = ["//signal/tensorflow_core/ops:fft_ops"],
+    cc_op_kernels = [
+        "//signal/tensorflow_core/kernels:fft_kernel",
+    ],
+)
+
+py_test(
+    name = "fft_ops_test",
+    srcs = ["ops/fft_ops_test.py"],
+    python_version = "PY3",
+    srcs_version = "PY3",
+    deps = [
+        ":fft_ops",
+        "//python/tflite_micro/signal/utils:util",
+        requirement("numpy"),
+        requirement("tensorflow-cpu"),
     ],
 )
 
