Add shims for backwards compatibility.

--- a/python/tflite_micro/BUILD
+++ b/python/tflite_micro/BUILD
@@ -31,6 +31,7 @@ cc_library(
     visibility = [
         ":op_resolver_friends",
         "//tensorflow/lite/micro/integration_tests:__subpackages__",
+        "//tensorflow/lite/micro/python/interpreter/src:__subpackages__",
     ],
     deps = [
         "//tensorflow/lite/micro:micro_compatibility",
