build(bazel): treat compiler warnings as errors by default
Make all bazel builds treat compiler warnings as errors by
default.

BUG=closes #2057

--- a/.bazelrc
+++ b/.bazelrc
@@ -18,6 +18,9 @@
 # Use the following C++ standard
 build --cxxopt -std=c++17
 
+# Treat warnings as errors
+build --copt -Werror
+
 # When building with the address sanitizer
 # E.g., bazel build --config asan
 build:asan --repo_env CC=clang
