--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -18,7 +18,7 @@ pull_request_rules:
         method: squash
         commit_message_template: |
           {{ title }} (#{{ number }})
-          {{ body_raw | wordwrap(width=79, break_long_words=False) }}
+          {{ body_raw  }}
 
   - name: remove ci:ready_to_merge label
     conditions:
