--- a/tensorflow/lite/micro/kernels/BUILD
+++ b/tensorflow/lite/micro/kernels/BUILD
@@ -250,6 +250,7 @@ tflm_kernel_cc_library(
         "reduce.cc",
         "reduce_common.cc",
         "reshape.cc",
+        "reshape_common.cc",
         "resize_bilinear.cc",
         "resize_nearest_neighbor.cc",
         "round.cc",
@@ -300,6 +301,7 @@ tflm_kernel_cc_library(
         "prelu.h",
         "quantize.h",
         "reduce.h",
+        "reshape.h",
         "softmax.h",
         "sub.h",
         "svdf.h",
