Adds Signal Library RFFT OP (#2056)
Second OP for the TFLM Signal library, Real-Valued Fast Fourier Transform.

The RFFT OP provides three resolutions: `FLOAT, INT16, INT32`

Similar usage as to previous Window OP:
* `op_resolver.AddRfft()` (which will add all resolutions, and determine the type at runtime)
* `op_resolver.AddRfftFloat()`, `op_resolver.AddRfftInt16()`, `op_resolver.AddRfftInt32()` for a specific resolution type.
* or via python as can be seen in `fft_ops_test.py`

3 testing options are provided:
* Micro(C++): bazel run signal/micro/kernels:fft_test
* Tensorflow/Micro(Python): bazel run python/tflite_micro/signal:fft_ops_test
* Makefile(C++): make -f tensorflow/lite/micro/tools/make/Makefile test_kernel_fft_test

BUG=[287346710](http://b/287346710)

--- a/signal/micro/kernels/BUILD
+++ b/signal/micro/kernels/BUILD
@@ -10,14 +10,20 @@ package(
 cc_library(
     name = "register_signal_ops",
     srcs = [
+        "rfft.cc",
         "window.cc",
+    ],
+    hdrs = [
+        "rfft.h",
     ],
     copts = micro_copts(),
     visibility = [
         "//tensorflow/lite/micro",
     ],
     deps = [
+        "//signal/src:rfft",
         "//signal/src:window",
+        "//tensorflow/lite:type_to_tflitetype",
         "//tensorflow/lite/kernels:kernel_util",
         "//tensorflow/lite/kernels/internal:tensor",
         "//tensorflow/lite/micro:flatbuffer_utils",
@@ -26,6 +32,33 @@ cc_library(
         "//tensorflow/lite/micro:micro_context",
         "//tensorflow/lite/micro:micro_utils",
         "//tensorflow/lite/micro/kernels:kernel_util",
+    ],
+)
+
+cc_library(
+    name = "fft_flexbuffers_generated_data",
+    srcs = [
+        "fft_flexbuffers_generated_data.cc",
+    ],
+    hdrs = [
+        "fft_flexbuffers_generated_data.h",
+    ],
+)
+
+cc_test(
+    name = "fft_test",
+    srcs = [
+        "fft_test.cc",
+    ],
+    deps = [
+        ":fft_flexbuffers_generated_data",
+        ":register_signal_ops",
+        "//signal/testdata:fft_test_data",
+        "//tensorflow/lite/c:common",
+        "//tensorflow/lite/micro:op_resolvers",
+        "//tensorflow/lite/micro:test_helpers",
+        "//tensorflow/lite/micro/kernels:kernel_runner",
+        "//tensorflow/lite/micro/testing:micro_test",
     ],
 )
 
