--- a/signal/tensorflow_core/kernels/BUILD
+++ b/signal/tensorflow_core/kernels/BUILD
@@ -6,6 +6,15 @@ package(
 )
 
 tflm_signal_kernel_library(
+    name = "fft_kernel",
+    srcs = ["fft_kernels.cc"],
+    deps = [
+        "//signal/src:rfft",
+        "@tensorflow_cc_deps//:cc_library",
+    ],
+)
+
+tflm_signal_kernel_library(
     name = "window_kernel",
     srcs = ["window_kernel.cc"],
     deps = [
